# quant-backtester

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  benchmark_strategy.py  docker-compose.yml  pyproject.toml  quant-backtester.code-workspace  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: a3c9e1f2d4b5_add_equity_curve_to_performance_results.py  b2d5e8f1a9c3_add_rsi_fields_to_research_runs.py  c7e2f3a4b8d1_add_research_runs.py  e9f4a2b1c3d6_add_session_id_to_runs.py  f17d31bb0c54_initial_migration.py
backtester/: engine.py  metrics.py
data/: loader.py  spy_data.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: EquityChart.jsx  LiveView.jsx  MetricsPanel.jsx  ResultsView.jsx  RunForm.jsx  Sidebar.jsx  TopBar.jsx  TradeTable.jsx
frontend/src/pages/: AboutPage.jsx  BacktestPage.jsx  HistoryPage.jsx  ResearchPage.jsx  ResultsPage.jsx
notebooks/: benchmark_cpp.ipynb  notebook.ipynb  notebook_demo.ipynb  real_data_research.ipynb  research_ma_crossover.ipynb
notebooks/data/: spy_data.csv
src/: config.py  data_fetcher.py  data_handler.py  data_loader.py  engine.py  events.py  ml_strategy.py  performance.py  portfolio.py  research.py  strategy.py  visualization.py  walk_forward.py
src/api/: jobs.py  main.py  research_routes.py  routes.py  schemas.py
src/cpp/: strategy.cpp
src/db/: database.py  models.py
strategies/: moving_average.py
tests/: test_api.py  test_cpp_strategy.py  test_data_feed.py  test_data_fetcher.py  test_data_loader.py  test_end_to_end.py  test_engine.py  test_integration.py  test_metrics.py  test_ml_strategy.py  test_performance.py  test_portfolio.py  test_research.py  test_sse.py  test_strategy.py  test_walk_forward.py
