[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-backtester"
version = "0.1.0"
description = "An event-driven quantitative backtesting engine"
authors = [
    {name = "Luca"}
]
dependencies = [
    "pandas",
    "pytest",
    "ipykernel",
    "yfinance",
    "matplotlib",
    "seaborn",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
